crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT030_glob_prefix.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT030.py:22:23: PT030 (pytest-warns-too-broad) `pytest.warns(foo.FooWarning)` is too broad, set the `match` parameter or use a more specific warning
   |
20 |         pass
21 |
22 |     with pytest.warns(FooWarning):
   |                       ^^^^^^^^^^ PT030 (pytest-warns-too-broad)
23 |         pass
   |
