crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT030_replace_broad_exceptions.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT030.py:11:23: PT030 (pytest-warns-too-broad) `pytest.warns(EncodingWarning)` is too broad, set the `match` parameter or use a more specific warning
   |
10 | def test_ok_different_error_from_config():
11 |     with pytest.warns(EncodingWarning):
   |                       ^^^^^^^^^^^^^^^ PT030 (pytest-warns-too-broad)
12 |         pass
   |
